<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <TableRow
        android:layout_width="413dp"
        android:layout_height="105dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp" />

    <LinearLayout
        android:layout_width="410dp"
        android:layout_height="622dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="107dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="182dp"
                android:layout_height="42dp"
                android:text="name" />

            <TextView
                android:id="@+id/tv_drink"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/drink" />

            <EditText
                android:id="@+id/ed_orderdrink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text=" " />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_ice"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/ice" />

            <TextView
                android:id="@+id/tv_sweet"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/sugar" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="268dp"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/RadioGroup_ice"
                android:layout_width="201dp"
                android:layout_height="256dp">

                <RadioButton
                    android:id="@+id/rd_no_ice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/no_ice" />

                <RadioButton
                    android:id="@+id/rd_less_ice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/less_ice" />

                <RadioButton
                    android:id="@+id/rd_half_ice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/half_ice" />

                <RadioButton
                    android:id="@+id/rd_full_ice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/full_ice" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/RadioGroup_sugar"
                android:layout_width="209dp"
                android:layout_height="249dp">

                <RadioButton
                    android:id="@+id/rd_no_sugar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/no_sugar" />

                <RadioButton
                    android:id="@+id/rd_less_sugar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/less_sugar" />

                <RadioButton
                    android:id="@+id/rd_half_sugar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/half_sugar" />

                <RadioButton
                    android:id="@+id/rd_full_sugar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/full_sugar" />

            </RadioGroup>
        </LinearLayout>

        <Button
            android:id="@+id/btn_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>