<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/tv"
        android:layout_width="411dp"
        android:layout_height="163dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:layout_width="401dp"
            android:layout_height="87dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/order"
                android:layout_width="123dp"
                android:layout_height="wrap_content"
                android:text="@string/order" />

            <EditText
                android:id="@+id/ed_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text=" " />

        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="151dp"
            android:layout_height="17dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:text="@string/button" />

        <TextView
            android:id="@+id/check_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_order"
            tools:ignore="MissingConstraints" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_others"
        android:layout_width="273dp"
        android:layout_height="155dp"
        android:text=" "
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv" />

</androidx.constraintlayout.widget.ConstraintLayout>